Reporte muestra nombre del curso junto a su sigla.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/EditorTemplates/ElegirGrupoEditorViewModel.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/EditorTemplates/ElegirGrupoEditorViewModel.cshtml
@@ -39,5 +39,6 @@
     @Html.HiddenFor(model => model.Semestre)
     @Html.HiddenFor(model => model.Numero)
     @Html.HiddenFor(model => model.SiglaCurso)
+    @Html.HiddenFor(model => model.NombreCurso)
 
 </tr>
