--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -22,7 +22,11 @@
                 type: "POST", //HTTP POST Method
                     url: "AgregarConformado", // Controller/View
                 data: { //Passing data
-                      codigoFormulario:  @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario))
+                    codigoFormulario:  @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario)),
+                    Orden_Seccion: $("#Orden_Seccion").val(),
+                    Orden_Item: $("#Orden_Item").val(),
+                    Titulo: $("input:radio[name=seccion]:checked").val(),
+                    ItemId: $("#item").val()
                     },
                     //success(function(data) {
                     //    $('#ConformadosID').html(result);
@@ -35,31 +39,33 @@
 
 </script>
 
-<div id="content">
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+@*<div id="content">*@  
     <div class="row">
         <div class="col-sm-4"><h3><strong>Codigo:</strong> @Model.Formulario.CodigoFormulario </h3></div>
         <div class="col-sm-8"><h3><strong>Nombre:</strong> @Model.Formulario.Nombre</h3></div>
     </div>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 
     <div class="form-group">
-        @Html.Label("Orden_Item", htmlAttributes: new { @class = "control-label col-md-2" })
 
-        <div class="col-md-10">
+        @Html.Label("Orden de la Seccion", htmlAttributes: new { @class = "control-label col-md-2" })
+
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.Orden_Seccion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Orden_Seccion, "", new { @class = "text-danger" })
+
+        </div>
+        @Html.Label("Orden de la pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
+
+        <div class="col-md-4">
             @Html.EditorFor(model => model.Orden_Item, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Orden_Item, "", new { @class = "text-danger" })
 
         </div>
 
-        <div class="form-group">
-            @Html.Label("Orden_Seccion", htmlAttributes: new { @class = "control-label col-md-2" })
-
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Orden_Seccion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Orden_Seccion, "", new { @class = "text-danger" })
-
-            </div>
-
+    </div>
             <button id="btnSave" name="btnSave">GUARDAR</button><br />
             <div class="row">
                 <div class="col-sm-5">
@@ -96,7 +102,7 @@
 
                 </div>
                 @*</div>
-                <div class="row">*@
+                    <div class="row">*@
                 <div class="col-sm-7">
                     <h4 align='center'><strong>@Html.Label("Banco de Preguntas")</strong></h4>
                     <table class="table table-bordered table-striped fixed_header">
@@ -171,7 +177,7 @@
 
                     <div style="float: left; width: 1000px; padding: 50px;">
                         @*@Html.Action("SeccionesAsignadas", new
-                        {CodForm = Model.Formulario.CodigoFormulario})*@
+                            {CodForm = Model.Formulario.CodigoFormulario})*@
                     </div>
 
                     <input type="submit" value="Generate report" />
