Upgrade a la funcion de filtrar y mostrar los formulario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Index.cshtml
@@ -9,20 +9,20 @@
 <div class="container">
     <div class="row col-sm-100% panel panel-default">
         <table class="table">
-            @Html.Hidden("selectcurso", null)
-            @Html.Hidden("selectsemestre", null)
-            @Html.Hidden("selectanno", null)
-            @Html.Hidden("selecgrupo", null)
             <tr>
                 <th>
+                    @Html.Hidden("selectcurso", null)
                     <label>Curso&nbsp;</label> @Html.DropDownList("CursoID", null, "<Seleccione Curso>", new { @class = "form-control", @onChange = "document.getElementById('selectcurso').value = this.value; this.form.submit();" })
                 </th>
                 <th>
+                    @Html.Hidden("selectsemestre", null)
+                    @Html.Hidden("selectanno", null)
                     <label>Ciclo&nbsp;</label>@Html.DropDownList("SemestreId", null, "<Seleccione el Semestre>", htmlAttributes: new { @class = "form-control", @onChange = "document.getElementsByName('selectsemestre').value = this.value; this.form.submit();" })
-                    <label>&nbsp;</label>@Html.DropDownList("AnnoId", null, "<Seleccione Año>", htmlAttributes: new { @class = "form-control" })
+                    <label>&nbsp;</label>@Html.DropDownList("AnnoId", null, "<Seleccione Año>", htmlAttributes: new { @class = "form-control", @onChange = "document.getElementsByName('selectanno').value = this.value; this.form.submit();" })
                 </th>
                 <th>
-                    <label>Grupo&nbsp;</label>@Html.DropDownList("GrupoID", null, "<Seleccione Grupo>", htmlAttributes: new { @class = "form-control" })
+                    @Html.Hidden("selecgrupo", null)
+                    <label>Grupo&nbsp;</label>@Html.DropDownList("GrupoID", null, "<Seleccione Grupo>", htmlAttributes: new { @class = "form-control", @onChange = "document.getElementsByName('selecgrupo').value = this.value; this.form.submit();" })
                 </th>
                 <th>
                     <label>&nbsp;</label><br />
@@ -34,7 +34,7 @@
             </tr>
         </table>
     </div>
-</div>
+ </div>
 
 <br />
 
@@ -48,16 +48,30 @@
                 <th></th>
             </tr>
 
+            @{string formulario_actual = ""; List<string> formularios = new List<string>(); bool formulario_repetido = false;}
+
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Visualizar formulario", "Details", new { id = item.CodigoFormulario })
-                    </td>
-                </tr>
+                formulario_actual = item.CodigoFormulario;
+
+                if (formularios.Contains(formulario_actual))
+                    { formulario_repetido = true; }
+                else {
+                    formularios.Add(formulario_actual);
+                    formulario_repetido = false;
+                }
+
+                if (formulario_repetido == false)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Visualizar formulario", "Details", new { id = item.CodigoFormulario })
+                        </td>
+                    </tr>
+                }
             }
         </table>
     </div>
