--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -26,7 +26,7 @@
                     {
                         <!-- Buscador -->
                         <p>
-                            <div class="filtroAsig">
+                            <div class="filter">
                                 <a> @Html.DropDownList("unidadAcademica", null, "Unidad Academica", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
                                 <a> @Html.DropDownList("nombreCarrera", null, "Carrera", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
                                 <a> @Html.DropDownList("nombreCurso", null, "Curso", new { @class = "btn btn-info dropdown-toggle", style = "width:130px;" }) </a>
